--- a/package.json
+++ b/package.json
@@ -57,12 +57,13 @@
     "ethereum-waffle": "^3.2.1",
     "ethers": "^5.0.26",
     "hardhat": "^2.3.0",
-    "hardhat-deploy": "^0.7.0-beta.44",
+    "hardhat-deploy": "^0.9.10",
     "hardhat-deploy-ethers": "^0.3.0-beta.7",
     "hardhat-gas-reporter": "^1.0.4",
     "hardhat-typechain": "^0.3.3",
     "hardhat-watcher": "^2.1.1",
     "mocha": "8.3.2",
+    "prb-math": "^2.4.1",
     "prettier": "^2.2.1",
     "prettier-plugin-solidity": "^1.0.0-beta.7",
     "solidity-coverage": "^0.7.16",
